; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/extr_utils.c_sws_getColorspaceDetails.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/extr_utils.c_sws_getColorspaceDetails.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SwsContext = type { i32*, i32*, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sws_getColorspaceDetails(%struct.SwsContext* %0, i32** %1, i32* %2, i32** %3, i32* %4, i32* %5, i32* %6, i32* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca %struct.SwsContext*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32**, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  store %struct.SwsContext* %0, %struct.SwsContext** %10, align 8
  store i32** %1, i32*** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32** %3, i32*** %13, align 8
  store i32* %4, i32** %14, align 8
  store i32* %5, i32** %15, align 8
  store i32* %6, i32** %16, align 8
  store i32* %7, i32** %17, align 8
  %18 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %19 = icmp ne %struct.SwsContext* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %8
  store i32 -1, i32* %9, align 4
  br label %50

21:                                               ; preds = %8
  %22 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %23 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = load i32**, i32*** %11, align 8
  store i32* %24, i32** %25, align 8
  %26 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %27 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %26, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  %29 = load i32**, i32*** %13, align 8
  store i32* %28, i32** %29, align 8
  %30 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %31 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %30, i32 0, i32 2
  %32 = load i32, i32* %31, align 8
  %33 = load i32*, i32** %12, align 8
  store i32 %32, i32* %33, align 4
  %34 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %35 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %34, i32 0, i32 3
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %14, align 8
  store i32 %36, i32* %37, align 4
  %38 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %39 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %38, i32 0, i32 4
  %40 = load i32, i32* %39, align 8
  %41 = load i32*, i32** %15, align 8
  store i32 %40, i32* %41, align 4
  %42 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %43 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %42, i32 0, i32 5
  %44 = load i32, i32* %43, align 4
  %45 = load i32*, i32** %16, align 8
  store i32 %44, i32* %45, align 4
  %46 = load %struct.SwsContext*, %struct.SwsContext** %10, align 8
  %47 = getelementptr inbounds %struct.SwsContext, %struct.SwsContext* %46, i32 0, i32 6
  %48 = load i32, i32* %47, align 8
  %49 = load i32*, i32** %17, align 8
  store i32 %48, i32* %49, align 4
  store i32 0, i32* %9, align 4
  br label %50

50:                                               ; preds = %21, %20
  %51 = load i32, i32* %9, align 4
  ret i32 %51
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
